src/main/java/com/example/auctionwebapp/userManagement/common/error/handler/GlobalExceptionHandle.java
package com.example.auctionwebapp.userManagement.common.error.handler;

public class GlobalExceptionHandle {

}
